--- a/deploy.yml
+++ b/deploy.yml
@@ -1,22 +1,22 @@
 ---
 - name: Pull Docker Image from Docker Hub
   hosts: localhost
-  remote_user: deepa
+  remote_user: bhumika
   become: false
   tasks:
     - name: Pull Docker Image
       docker_image:
-        name: "db4558/cal-java"
+        name: "bhumika16/calculator-java"
         source: pull
       register: docker_pull_result
 
     - name: Display Docker Pull Result
       debug:
         var: docker_pull_result
-        
+
     - name: Start Docker service
       service:
         name: docker
         state: started
     - name: Running container
-      shell: docker run -it -d --name calculator-java db4558/cal-java
+      shell: docker run -it -d --name calculator bhumika16/calculator-java
